# the-consciouness-trilogy

./: CONTRIBUTING.md  FILE_MANIFEST.md  LICENSE  PHILOSOPHY.md  PROJECT_SUMMARY.md  README.md  advanced_tests.py  chart_script.py  chart_script_1.py  consciousness.py  examples.py  pyproject.toml  run_tests.py  script.py  script_1.py  script_10.py  script_11.py  script_12.py  script_2.py  script_3.py  script_4.py  script_5.py  script_6.py  script_7.py  script_8.py  script_9.py  test_consciousness.py
