[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "consciousness-trilogy"
version = "1.0.0"
description = "Executable Philosophy: A Symbolic Simulation of Consciousness Across Three Scales"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["consciousness", "philosophy", "simulation", "conceptual-art", "executable-philosophy"]
authors = [
    {name = "Consciousness Trilogy Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Philosophy",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/consciousness-trilogy"
"Bug Tracker" = "https://github.com/yourusername/consciousness-trilogy/issues"
"Documentation" = "https://github.com/yourusername/consciousness-trilogy/blob/main/PHILOSOPHY.md"

[project.scripts]
consciousness = "consciousness:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
